update python tutotial

--- a/examples/PENCIL_Tutorial_in_Python.html
+++ b/examples/PENCIL_Tutorial_in_Python.html
@@ -14028,7 +14028,7 @@ a.anchor-link {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="PENCIL-examples">PENCIL examples<a class="anchor-link" href="#PENCIL-examples">&#182;</a></h2><p>For convenience, we convert seurat objects to '.h5ad' files and then load them into scanpy/anndata objects. The data download and conversion steps are included in the r script <code>data_download.R</code>, so if you have not downloaded the data yet, run the change script in R.</p>
 
-<pre><code>source('ata_download.R') #R</code></pre>
+<pre><code>source('data_download.R') #R</code></pre>
 
 </div>
 </div>
