update tutorials in R&python

--- a/examples/PENCIL_Tutorial_in_Python.html
+++ b/examples/PENCIL_Tutorial_in_Python.html
@@ -15056,7 +15056,7 @@ Number of examples rejected= 10214 / 16291
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Referrence">Referrence<a class="anchor-link" href="#Referrence">&#182;</a></h2><p>Supervised learning of high-confidence phenotypic subpopulations from single-cell data (2022).</p>
+<h2 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h2><p>Supervised learning of high-confidence phenotypic subpopulations from single-cell data (2022).</p>
 <p>Tao Ren, Ling-Yun Wu and Zheng Xia</p>
 
 </div>
