--- a/examples/PENCIL_Tutorial_in_Python.html
+++ b/examples/PENCIL_Tutorial_in_Python.html
@@ -14211,7 +14211,7 @@ a.anchor-link {
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h4 id="Excute-PENCIL">Excute PENCIL<a class="anchor-link" href="#Excute-PENCIL">&#182;</a></h4>
+<h4 id="Execute-PENCIL">Execute PENCIL<a class="anchor-link" href="#Execute-PENCIL">&#182;</a></h4>
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
@@ -14703,7 +14703,7 @@ weighted avg       0.93      0.93      0.93      1987
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h4 id="Excute-PENCIL">Excute PENCIL<a class="anchor-link" href="#Excute-PENCIL">&#182;</a></h4><p>Extract the PCs-matrix and timepoints labels for PENCIL.</p>
+<h4 id="Execute-PENCIL">Execute PENCIL<a class="anchor-link" href="#Execute-PENCIL">&#182;</a></h4><p>Extract the PCs-matrix and timepoints labels for PENCIL.</p>
 
 </div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
