--- a/examples/FAQ/PENCIL_FAQ.html
+++ b/examples/FAQ/PENCIL_FAQ.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2023-01-20" />
+<meta name="date" content="2023-11-06" />
 
 <title>Frequently asked questions</title>
 
@@ -1634,7 +1634,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">Frequently asked questions</h1>
-<h4 class="date">2023-01-20</h4>
+<h4 class="date">2023-11-06</h4>
 
 </div>
 
@@ -1650,6 +1650,10 @@ selected?</a></li>
 <li><a href="#how-does-pencil-determine-the-time-change-direction-in-continuous-phenotype-regression" id="toc-how-does-pencil-determine-the-time-change-direction-in-continuous-phenotype-regression">How
 does PENCIL determine the time change direction in continuous phenotype
 regression?</a></li>
+<li><a href="#why-do-different-orders-of-input-genes-lead-to-different-outputs" id="toc-why-do-different-orders-of-input-genes-lead-to-different-outputs">Why
+do different orders of input genes lead to different outputs?</a></li>
+<li><a href="#how-to-set-the-parameter-class_weights" id="toc-how-to-set-the-parameter-class_weights">How to set the parameter
+<em>class_weights</em>?</a></li>
 </ul>
 </div>
 
@@ -1720,6 +1724,43 @@ the given phenotype labels used to train the model. Therefore, the
 supervised learning of phenotypic trajectory implemented in PENCIL can
 determine the time change direction, which is impossible for previous
 unsupervised pseudo-time analysis.</p>
+</div>
+<div id="why-do-different-orders-of-input-genes-lead-to-different-outputs" class="section level1">
+<h1>Why do different orders of input genes lead to different
+outputs?</h1>
+<p>Theoretically, the order of the genes does not introduce differences
+in the model. Differences in results may be introduced by running the
+optimization algorithm. For example, both our model and the solution
+process are based on the deep learning framework Pytorch implementation,
+which contains a step to randomly initialize the parameters. Even if the
+random number of states is fixed, for a different order of feature
+inputs, this corresponds to performing a different initialization. This
+may lead to the model eventually converging to different local optimal
+solutions, thus producing divergent results.</p>
+<p>The magnitude of this difference may also be related to the
+distribution of the data itself. For example, in our simulated data, the
+difference in results from disrupting the gene order is very small. In
+the real data used, this difference looks larger. However, the results
+of multiple tests with randomly disturbed gene order also show that the
+difference is still within an acceptable range.</p>
+<p>Initializing the parameters of the model to an identical constant may
+eliminate this discrepancy, but on the other hand may result in a less
+efficient optimization algorithm. In our analysis, the expression
+matrices extracted from the seurat object are by default sorted
+according to the variance score (‘vst.variance.standardized’) in
+ascending order, and we recommend that users who employ other data input
+methods use a similar strategy to sort the genes before executing the
+PENCIL workflow in order to obtain consistent results.</p>
+</div>
+<div id="how-to-set-the-parameter-class_weights" class="section level1">
+<h1>How to set the parameter <em>class_weights</em>?</h1>
+<p>The purpose of introducing <em>class_weights</em> is to balance the
+number of cells in different classes in order to prevent some classes
+from being rejected all together because of a low number of cells.
+Therefore, when the number of cells in each category differs greatly, we
+recommend setting the weights to be inversely proportional to the number
+of cells in each category. Alternatively, the parameter can also be set
+based on how much the user values different categories.</p>
 </div>
 
 
