--- a/examples/FAQ/PENCIL_FAQ.html
+++ b/examples/FAQ/PENCIL_FAQ.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2023-11-06" />
+<meta name="date" content="2023-11-13" />
 
 <title>Frequently asked questions</title>
 
@@ -1634,7 +1634,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">Frequently asked questions</h1>
-<h4 class="date">2023-11-06</h4>
+<h4 class="date">2023-11-13</h4>
 
 </div>
 
@@ -1728,29 +1728,72 @@ unsupervised pseudo-time analysis.</p>
 <div id="why-do-different-orders-of-input-genes-lead-to-different-outputs" class="section level1">
 <h1>Why do different orders of input genes lead to different
 outputs?</h1>
-<p>Theoretically, the order of the genes does not introduce differences
-in the model. Differences in results may be introduced by running the
-optimization algorithm. For example, both our model and the solution
-process are based on the deep learning framework Pytorch implementation,
-which contains a step to randomly initialize the parameters. Even if the
-random number of states is fixed, for a different order of feature
-inputs, this corresponds to performing a different initialization. This
-may lead to the model eventually converging to different local optimal
-solutions, thus producing divergent results.</p>
-<p>The magnitude of this difference may also be related to the
-distribution of the data itself. For example, in our simulated data, the
-difference in results from disrupting the gene order is very small. In
-the real data used, this difference looks larger. However, the results
-of multiple tests with randomly disturbed gene order also show that the
-difference is still within an acceptable range.</p>
-<p>Initializing the parameters of the model to an identical constant may
-eliminate this discrepancy, but on the other hand may result in a less
-efficient optimization algorithm. In our analysis, the expression
-matrices extracted from the seurat object are by default sorted
-according to the variance score (‘vst.variance.standardized’) in
-ascending order, and we recommend that users who employ other data input
-methods use a similar strategy to sort the genes before executing the
-PENCIL workflow in order to obtain consistent results.</p>
+<p>In theory, the arrangement of genes in the dataset should not
+influence the mathematical model. However, variations in outcomes might
+arise during the execution of the optimization algorithm. For instance,
+our model and its solution methodology are grounded in the PyTorch deep
+learning framework, which involves a phase of random parameter
+initialization. Despite setting a fixed random state, varying the order
+of input features essentially amounts to different initializations.
+Consequently, this can result in the model converging to disparate local
+optima, thereby yielding divergent outcomes.</p>
+<p>The extent of this discrepancy might also be influenced by the data
+distribution itself. For instance, in our simulated dataset, altering
+the gene order yields only a negligible difference in results. However,
+with the real data we utilized, this difference appears more pronounced.
+Yet, multiple tests with gene order randomly altered indicate that the
+difference remains within a tolerable range.</p>
+<p>Setting the model’s parameters to a uniform constant could
+potentially resolve this discrepancy. However, this approach might lead
+to a less effective optimization process. In our analysis, the
+expression matrices extracted from the Seurat object are sorted by
+default based on the variance score (‘vst.variance.standardized’) in
+ascending order. We strongly recommend that users with different data
+input methods adopt a similar gene sorting strategy before initiating
+the PENCIL workflow. This practice is helpful to achieving consistent
+results.</p>
+<p>For instance, for the users who inputs a count file (or
+seurat-object) and wishes to save the required data as CSV files, then
+read the CSV files in Python to run PENCIL, they can follow the steps
+below can to realize loading and saving:</p>
+<pre class="r"><code># In R
+# Load the &quot;.txt&quot; count file and create a seurat object.
+counts = read.table(&#39;sc_counts.txt&#39;)
+sc_data = CreateSeuratObject(counts=counts)
+
+# Preprocess by seurat workflow
+sc_data &lt;- NormalizeData(object=sc_data, normalization.method=&quot;LogNormalize&quot;)
+sc_data &lt;- FindVariableFeatures(object=sc_data, selection.method=&#39;vst&#39;, nfeatures=2000)
+sc_data &lt;- ScaleData(object=sc_data)
+
+# Extract the scaled expression matrix and phenotype labels, and save them to &quot;.csv&quot; files. 
+# Genes are listed in descending order by VST score. 
+exp_data = sc_data@assays[[&quot;RNA&quot;]]@scale.data[VariableFeatures(sc_data),] 
+write.csv(exp_data, file=paste(filepath, &#39;exp_data.csv&#39;, sep = &#39;&#39;))
+
+labels = as.matrix(sc_data$phenotype)
+row.names(labels) = colnames(exp_data)
+write.csv(labels, file=paste(filepath, &#39;label.csv&#39;, sep = &#39;&#39;))</code></pre>
+<p>And for those using Scanpy to analyze their data in python, they can
+also follow the process below to fix the order of the genes:</p>
+<pre><code># In a terminal
+# Install the dependency packages first
+pip install scanpy
+pip install --user scikit-misc</code></pre>
+<pre class="python"><code># In Python
+# Preprocess by seurat scanpy workflow
+sc.pp.normalize_total(adata, target_sum=1e4)
+sc.pp.log1p(adata)
+sc.pp.highly_variable_genes(adata, flavor=&#39;seurat_v3&#39;, n_top_genes=2000)
+
+# Order genes by &#39;highly_variable_rank&#39;
+HVG_info = adata.var.loc[adata.var[&#39;highly_variable&#39;], ].copy()
+HVG_info.sort_values(by=&#39;highly_variable_rank&#39;, ascending=True, inplace=True)
+HVGs = HVG_info.index.values
+adata = adata[:, HVGs]
+
+sc.pp.scale(adata, max_value=10)
+data = adata_.X</code></pre>
 </div>
 <div id="how-to-set-the-parameter-class_weights" class="section level1">
 <h1>How to set the parameter <em>class_weights</em>?</h1>
@@ -1759,8 +1802,11 @@ number of cells in different classes in order to prevent some classes
 from being rejected all together because of a low number of cells.
 Therefore, when the number of cells in each category differs greatly, we
 recommend setting the weights to be inversely proportional to the number
-of cells in each category. Alternatively, the parameter can also be set
-based on how much the user values different categories.</p>
+of cells in each category. For example, if there are three categories
+containing 1000, 2000, and 3000 cells respectively, class_weights should
+be set to 3:1.5:1 in order to balance their cell numbers.</p>
+<p>Alternatively, the parameter can also be set based on how much the
+user values different categories.</p>
 </div>
 
 
